--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "mongodb": "^6.10.0",
     "mongoose": "^8.7.2",
     "next": "15.0.1",
-    "next-auth": "^4.24.9",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021"
+    "next-auth": "^4.24.10",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "postcss": "^8",
